Agregados Toast informativos cuando se guarda/borra una localización. Solucionado el problema que cerraba la aplicación al abrir agregar coche dos veces